{
    "name": "UserInputAction",
    "maps": [
        {
            "name": "SelectUnit",
            "id": "b1eeaf99-e3fc-4f30-9ad3-2fb5a0d0b88c",
            "actions": [
                {
                    "name": "EnemySelectionMove",
                    "type": "Button",
                    "id": "85574eea-c6d5-4616-af9c-2a4a44cceffc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerSelectionMove",
                    "type": "Button",
                    "id": "9edaca14-fdc2-4600-98b3-b8fe49408350",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnClick",
                    "type": "Button",
                    "id": "fb7d950c-ac56-4e99-91dc-3d6a5bf2a0da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectionConfirm",
                    "type": "Button",
                    "id": "b031a05d-d271-4db8-8cf4-9bcd4b8793bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "4411170b-700d-43b0-a7d2-29563847632c",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "Clamp(min=-1,max=1),Invert",
                    "groups": "",
                    "action": "EnemySelectionMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Positive",
                    "id": "6a0695e9-d578-4483-8a6b-fe690b4b6b47",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "EnemySelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "0fe4193a-fb5a-429e-a116-ff4a17014670",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "EnemySelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "1cc86ba4-741d-4d89-89cd-f6e7a6192e78",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "EnemySelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "3e7680d4-9e88-4f85-97c6-39e604fd766b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "EnemySelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "54835484-af28-45c6-a792-508a205af995",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "Clamp(min=-1,max=1)",
                    "groups": "",
                    "action": "PlayerSelectionMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Positive",
                    "id": "a97a0bb5-a57f-4d89-954f-7815f14f8c56",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PlayerSelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "6da9531d-a20e-4dbf-a7ba-a94abd741c92",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PlayerSelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "0e67d116-97b6-4aad-a7cc-ad4d0fb93546",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PlayerSelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Negative",
                    "id": "11f53f30-7bdb-4c0a-be77-366ae5ca32e5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PlayerSelectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2da518e1-33f0-46f9-8484-b7ba0491be35",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "SelectionConfirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b33a087-31b2-46e6-854b-a41895a9c538",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "SelectionConfirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a7d326e-2760-475a-b7b6-d5daedeec835",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SelectAction",
            "id": "1c9601b1-d19e-4ca3-ac0a-79a7438ec68d",
            "actions": [
                {
                    "name": "BaseAttack",
                    "type": "Button",
                    "id": "1ceb7585-c567-4edf-b837-ae22ddcfa408",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillSelect",
                    "type": "Button",
                    "id": "3f26849e-77c7-4028-892e-17915b0bfaf3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "74bbddcb-adb3-4116-98d1-70ad02f7b57d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e723149-4cd5-488c-ae82-296d0d2179f5",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "163d82d0-263f-4830-8b31-7b33bfab0205",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bf569b0-1f81-41a5-bf7f-99434f786755",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "QTE",
            "id": "ade6d4c6-fe8a-4e62-b039-7773a71c1fd1",
            "actions": [
                {
                    "name": "ButtonA",
                    "type": "Button",
                    "id": "abb0381d-5011-450f-b9d9-4374d2aded85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad6dd39b-f63d-4387-a451-883d1789f911",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}